Autoloading for the `DoctrineIntegration` namespace

--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     },
     "autoload": {
         "psr-4": {
+            "DoctrineIntegration\\": "src/DoctrineIntegration",
             "Authentication\\": "src/Authentication",
             "Library\\":        "src/Library",
             "Enforcement\\":    "src/Enforcement"
